fix hero sizes on mobile

--- a/styles/main.less
+++ b/styles/main.less
@@ -178,6 +178,9 @@ h5{font-size: 24px;}
     min-height: fit-content;
     height: 100vh;
     padding: @size-5;
+    @media (max-width: 900px) {
+        padding: @size-5 @size-2;
+    }
 
     display: flex;
     flex-direction: column;
